--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       <fieldset class="form__element">
         <label for="price">Цена за ночь, руб.</label>
-        <input id="price" name="price" type="number" placeholder="5000" maxlength="1000000" required>
+        <input id="price" name="price" type="number" placeholder="5000" max="1000000" required>
       </fieldset>
 
       <fieldset class="form__element">
@@ -253,6 +253,7 @@
 <script src="js/popup.js"></script>
 <script src="js/form.js"></script>
 <script src="js/filter.js"></script>
+<script src="js/dragndrop.js"></script>
 
 </body>
 </html>
