--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       <fieldset class="form__element">
         <label for="price">Цена за ночь, руб.</label>
-        <input id="price" name="price" type="number" placeholder="5000" max="1000000" required>
+        <input id="price" name="price" type="number" placeholder="5000" min="0" max="1000000" required>
       </fieldset>
 
       <fieldset class="form__element">
@@ -190,7 +190,7 @@
         <label>Фотографии жилья</label>
         <div class="form__photo-container">
           <div class="upload">
-            <input type="file" id="images">
+            <input type="file" id="images" multiple>
             <label for="images" class="drop-zone">Загрузите или&nbsp;перетащите сюда фото</label>
           </div>
         </div>
@@ -253,7 +253,6 @@
 <script src="js/popup.js"></script>
 <script src="js/form.js"></script>
 <script src="js/filter.js"></script>
-<script src="js/dragndrop.js"></script>
 
 </body>
 </html>
